even more css bug squashing

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -7,7 +7,7 @@
 
 /*	EXAMPLE STYLES */
 nav {
-	background: rgba(0, 0, 0, 0.1)
+	background: rgba(0, 0, 0, 0.1);
 	background-color: grey;
 }
 
